Profile now pulling only own posts and passing data to entry view

--- a/SocialJournal/SocialJournal/Base.lproj/Main.storyboard
+++ b/SocialJournal/SocialJournal/Base.lproj/Main.storyboard
@@ -1182,6 +1182,13 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
                     <navigationItem key="navigationItem" title="Profile" id="Z5g-Jv-uxb"/>
+                    <connections>
+                        <outlet property="followersCountLabel" destination="y9r-TH-BzJ" id="qOU-3T-BRU"/>
+                        <outlet property="followingCountLabel" destination="v59-Wk-rrk" id="4d4-6C-exA"/>
+                        <outlet property="profileNameLabel" destination="K1F-jt-eNu" id="zhC-wP-lKN"/>
+                        <outlet property="tableView" destination="7Ky-UC-FIO" id="SMh-Jb-JaE"/>
+                        <outlet property="totalHeartsLabel" destination="fJv-ww-UVY" id="HkB-s9-wRI"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="1er-F0-UvE" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
