Removed separator lines in table view master navigation

--- a/SocialJournal/SocialJournal/Base.lproj/Main.storyboard
+++ b/SocialJournal/SocialJournal/Base.lproj/Main.storyboard
@@ -1259,6 +1259,6 @@
     <inferredMetricsTieBreakers>
         <segue reference="5mn-79-rbf"/>
         <segue reference="vzU-P3-mFj"/>
-        <segue reference="3gm-hb-wGX"/>
+        <segue reference="qEZ-MI-FGR"/>
     </inferredMetricsTieBreakers>
 </document>
