reduced size of navigation bar

--- a/SocialJournal/SocialJournal/Base.lproj/Main.storyboard
+++ b/SocialJournal/SocialJournal/Base.lproj/Main.storyboard
@@ -1257,7 +1257,7 @@
         <simulatedScreenMetrics key="destination"/>
     </simulatedMetricsContainer>
     <inferredMetricsTieBreakers>
-        <segue reference="5mn-79-rbf"/>
+        <segue reference="gnw-JH-eGf"/>
         <segue reference="vzU-P3-mFj"/>
         <segue reference="qEZ-MI-FGR"/>
     </inferredMetricsTieBreakers>
